--- a/src/pages/home/card/styles.css
+++ b/src/pages/home/card/styles.css
@@ -1,4 +1,3 @@
-/* 
 
 :root {
   --brand-color: hsl(224, 100%, 50%);
@@ -169,4 +168,4 @@
     transition: opacity 500ms ease-in, transform 500ms ease-in;
     transition-delay: 500ms;
   }
-} */
+} 
