Test: small frontend change

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 :root {
   /* Colors */
-  --color-bg: #black;
+  --color-bg: #white;
   /* --color-text-light: white; */
  
   /* Fonts */
