--- a/src/layouts/header/Header.css
+++ b/src/layouts/header/Header.css
@@ -1,5 +1,5 @@
 header {
-  font-family: var(--font-primary); /* Modern, clean font */
+  font-family: Arial, Helvetica, sans-serif; /* Modern, clean font */
 }
 
 .custom-desktop\:hidden {
@@ -11,7 +11,7 @@ header {
   display: none;
 }
 
-@media (min-width: 665px) and (max-width: 1020px) {
+@media (min-width: 6px) and (max-width: 10px) {
   .custom-desktop\:hidden {
     display: block; /* Show hamburger menu */
   }
@@ -21,7 +21,7 @@ header {
 }
 
 /* Above 1020px: Show desktop menu, hide hamburger menu */
-@media (min-width: 1021px) {
+@media (min-width: 10px) {
   .custom-desktop\:hidden {
     display: none; /* Hide hamburger menu */
   }
@@ -31,7 +31,7 @@ header {
 }
 
 /* Optional: Ensure submenu is hidden in mobile view */
-@media (max-width: 1020px) {
+@media (max-width: 10px) {
   .group .submenu {
     display: none; /* Keep this if needed for edge cases */
   }
